# planka

./: .cnb.yml  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pom.xml
.claude/agents/: code-improver.md  code-reviewer.md  git-commit-guard.md
.claude/hooks/: commit-message-check.md  pre-commit-check.md  risky-operations.md
.claude/memory/: backend-tools.md  decisions.md  frontend-components.md  project-state.md
.claude/rules/: 00-always.md  backend-architecture.md  backend-schema-cache.md  code-review.md  database.md  frontend-api.md  frontend-style.md  testing.md
.githooks/: pre-commit  setup-hooks.sh
docker/: README.md
docs/: architecture（系统整体架构设计）.md  biz-rule（业务规则功能设计）.md  card-action（卡片动作功能设计）.md  card-type-inheritance（卡片类型继承设计）.md  e2e-testing（端到端测试）.md  feishu-style-guide（飞书风格样式指南）.md  notification-event-processing-design.md  workload-requirements（工时服务需求）.md  workload-service-design（工时服务功能设计）.md  业务规则功能设计.md  借鉴Linear改造方案.md  卡片动作功能设计.md  卡片类型继承体系设计.md  端到端测试指南.md  系统整体架构设计.md  通知服务事件处理流程设计.md
docs/dev/: tools.md
kanban-apis/: pom.xml
kanban-apis/card-api/: pom.xml
kanban-apis/comment-api/: pom.xml
kanban-infrastructure/: pom.xml
kanban-integration-test/: pom.xml
kanban-kernel/: pom.xml
kanban-services/: pom.xml
kanban-starters/: pom.xml
kanban-ui/: .env.development  .env.production  BUGS.md  CONDITION_EDITOR_TEST.md  eslint.config.js  index.html  package-lock.json  package.json
planka-apis/: pom.xml
planka-graph/: Cargo.toml  Dockerfile  README.md  build.rs  build_log.txt  graph.conf  pgraph.conf
planka-graph-driver/: pom.xml
planka-graph/benches/: concurrency_test.rs  edge_bench.rs  vertex_bench.rs  vertex_id_to_u32.rs
planka-graph/docs/: FQA.md  git分支模式.md  版本说明.md
planka-graph/src/: config.rs  lib.rs  logger.rs  main.rs  proto.rs
planka-graph/src/cli/: mod.rs  query_converter.rs  result_processor.rs  sql_parser.rs
planka-graph/src/database/: transaction.rs
planka-graph/src/database/model/: identifiers.rs
planka-graph/src/database/rdb/: mod.rs  rdb_transaction.rs
planka-graph/src/database/test/: mod.rs  performance_tests.rs  test_utils.rs
planka-graph/src/proto/: pgraph.field.rs  pgraph.linkquery.rs  pgraph.response.rs  pgraph.write.rs  zgraph.common.rs
planka-graph/src/raft/: app.rs  client.rs  mod.rs  network.rs  store.rs  types.rs
planka-graph/src/raft/network/: api.rs  management.rs  raft_network_impl.rs  raft_service.rs
planka-graph/src/server/: card_converter.rs  filter.rs  helper.rs  link_querys.rs  mod.rs  page.rs  querys.rs  router.rs  writes.rs
planka-graph/src/server/test/: mod.rs  page_test.rs  test_concurrent_operations.rs  test_count_cards.rs  test_query_card_ids.rs  test_query_cards_with_condition.rs  test_query_cards_with_return.rs
planka-infra/: pom.xml
planka-infrastructure/: pom.xml
planka-kernel/: pom.xml
planka-services/: pom.xml
planka-shared/: pom.xml
planka-ui/: .env.development  .env.production  .gitignore  BUGS.md  CONDITION_EDITOR_TEST.md  eslint.config.js  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts  vitest.config.ts
scripts/: README.md  build.sh  docker-clean.sh  docker-up.sh  kanban-dev.sh  planka-dev.sh  start-all.sh  start-frontend.sh  start-service.sh  stop-all.sh  stop-service.sh  stop-services.sh
zgraph/: .gitignore  Cargo.toml  Dockerfile  README.md  build_log.txt  start-zgraph.sh  status-zgraph.sh  stop-zgraph.sh  zgraph.conf
zgraph-driver/: pom.xml
(+3349 files in other folders)
